saving all changes
